fix: fixing dark mode issue

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -825,10 +825,7 @@ a.input-group-text.icon.add.active {
 }
 
 & when (@dark-mode-enabled = true) {
-    html:not(.login-heading) {
-        @import "dark";
-    }
-    // @import "dark";
+    @import "dark";
 }
 
 @import (optional) "_styles";
